fix z-index battle

--- a/otoroshi/javascript/src/style/layout/_sidebar.scss
+++ b/otoroshi/javascript/src/style/layout/_sidebar.scss
@@ -6,7 +6,7 @@
   top: 51px;
   bottom: 0;
   left: 0;
-  z-index: 1000;
+  z-index: 1001;
   display: block;
   padding: 20px;
   overflow-x: hidden;
